# excerpt-html

./: .gitignore  CHANGES.md  MANIFEST.in  README.md  excerpt_html.py  setup.cfg  tox.ini
.github/workflows/: tests.yml
excerpt_html/: lektor.py
tests/: test_excerpt_html.py  test_lektor.py
