[metadata]
name = excerpt-html
description = Extract summary from HTML text
long_description = file: README.md, CHANGES.md
long_description_content_type = text/markdown
url = https://github.com/dairiki/excerpt-html
author = Jeff Dairiki
author_email = dairiki@dairiki.org
keywords = HTML, excerpt, summary
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Filters
    Topic :: Text Processing :: Markup :: HTML
[options]
py_modules = excerpt_html
setup_requires =
    setuptools >= 40
    setuptools_scm
install_requires =
    beautifulsoup4
    html5lib

[bdist_wheel]
universal = 1
